# BUT

./: .gitignore  README.md  id_github  id_github.pub
.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
Other/: renduMonnaie.py
S1/Archi/: README.md  TD2.md  TD3.md  TD3EX4.cpp  codage_entiers_signes.md
S1/R103_Archi/: TD2.md  codage_rééls.md
S1/R105_BD/: Sem10.txt  Sem11.txt  Sem12.txt
S1/S104_CréaBD/: Giffard.db  Giffard.loo  Giffard.sqbpro  S104_merienne_ash.7z  codeVille.txt  creation_base_merienne_ash.sql  donnees_base_merienne_ash.sql  requetes_base_merienne_ash.sql  script_Mocodo.txt
S2/ARCHI/: micro1.circ  micro3.circ  projet.circ
S2/DOO/: .classpath  .project
S2/Droit/: README.md
S2/IHM/: TP1.md
S2/TE/: README.md
S3-APP/R301_DevWeb/: .editorconfig  array.css  global.css
S3-APP/R302/: .project
S3-APP/R302_Dev_Efficace/: .classpath  .project
S3-APP/R306_Reseau/: tp1_autonome_dhcp_routage_dns.mar
S3-APP/R307/: OutilsJDBC.java  TP-revisionsPLSQL.sql  extensionFilm.sql
S3-APP/R308_Maths_Stats/: TP1_Ash_MERIENNE.ipynb  TP2_Ash_MERIENNE.ipynb  matrix.ipynb
S4-APP/R403_Web_Semantique/: README.md  TP2.md  TP3.md  TP4.md  TP5.md  TP6-query-result.ttl  TP6.md  paris.ttl  tp1.ttl  tp3.ttl
S5-APP/R520_Algebre_Lineaire/: lightsOut.ipynb
S6-APP/R6A02_Qualite/: amortized_queue.mlw  mccarthy.mlw  tree_max.mlw
S6-APP/R6A05_Programmation_IoT/: README.md
S6-APP/R6A05_Programmation_IoT/Module_7/capteur_json/: CMakeLists.txt  prj.conf
S6-APP/R6A05_Programmation_IoT/Module_7/capteur_json/src/: main.c
(+923 files in other folders)
